test/2-error/undefined-sym.test
{
  'compile-code': 1,
  'compile-err': '''\
scope error: test/2-error/undefined-sym.ploy:2:3-11: `undefined` is not defined in this scope
    undefined
    ~~~~~~~~~
'''
}
