test/2-error/undefined-sym.ploy
main = fn <>%Int
  undefined
  0;
